Wed Dec  5 15:35:20 2001  Carlos O'Ryan  <coryan@uci.edu>

	* apps/Makefile.am:
	* docs/ACE-categories.html:
	  Removed left over references to Orbix handler.

	* apps/JAWS/remora/app/Makefile:
	* apps/JAWS/remora/app/stdmk:
	* apps/JAWS/remora/app/test.cc:
	* apps/JAWS/remora/app/remora.idl:
	* apps/JAWS/remora/app/Remora_Export.h:
	* apps/JAWS/remora/app/Remora_Export.i:
	* apps/JAWS/remora/app/Remora_Export.cc:
	* apps/JAWS/remora/app/Remora_Import.h:
	* apps/JAWS/remora/app/Remora_Import.i:
	* apps/JAWS/remora/app/Remora_Import.cc:
	  Another directory that could only compile if ORBeline was still
	  available.

Wed Dec 05 14:47:32 2001  Carlos O'Ryan  <coryan@uci.edu>

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp:
	  Removed CORBA_Handler.* and CORBA_Ref.* classes from the project
	  files.

Wed Dec  5 16:38:31 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/SString_Test.cpp:
	* examples/Misc/test_sstring.cpp (main): Changed from ACE_WString
	  to ACE_NS_WString so we can still initialize the test string
	  from char strings.  We can no longer initialize ACE_WString's
	  with char strings.  ACE_NS_WString maintains the old behavior,
	  however.

	* ace/SString.h:
	* ace/SString.i: Added string contatenation operator
	  ACE_NS_WString::operator+.

Wed Dec  5 12:37:56 2001  Carlos O'Ryan  <coryan@uci.edu>

	* Removed all code to support Orbix and any references to it in
	  the documentation (at least all references that I found).
	  We haven't tested this code in ages, so it was probably broken,
	  furthermore, IONA does not sell Orbix-2.X nor Orbix-3.X (the
	  versions our code was based on), and will probably stop
	  supporting old versions of Orbix before ACE-5.3 (or 6.0) come
	  out.

	* ace/Makefile:
	* ace/Makefile.am:
	* ace/Makefile.bor:
	* ace/ace-dll.icc:
	* ace/ace-lib.icc:
	* ace/ace.icc:
	* ace/CORBA_Handler.h:
	* ace/CORBA_Handler.i:
	* ace/CORBA_Handler.cpp:
	* ace/CORBA_Ref.h:
	* ace/CORBA_Ref.cpp:
	* ace/config-hpux-9.x-orbix.h: